--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Kayn_Wiki</title>
     <link href="styles.css" rel="stylesheet">
     </head>
-><body>
+<body>
     <header>
         <img class="WikiLogo" src="89653e88-6a6b-470b-b9af-920dbe016e55.webp" ><h1 class="Title">League of Legends Wiki <h3 class="Title"><a href="https://de.wikipedia.org/wiki/League_of_Legends">(League of Legends)</a></h3></h1> 
         </header>
@@ -14,9 +14,9 @@
     <p class="Margin">A peerless practitioner of lethal shadow magic, Shieda Kayn battles to achieve his true destiny—to one day lead the Order of Shadow into a new era of Ionian supremacy. He wields the sentient <a href="https://leagueoflegends.fandom.com/wiki/Darkin">darkin weapon</a> Rhaast, undeterred by its creeping corruption of his body and mind. There are only two possible outcomes: either Kayn bends the weapon to his will… or the malevolent blade consumes him completely, paving the way for the destruction of all Runeterra.</p>
 
 
+        <div>
 
-    <div style="display:grid;grid-template-columns: 2;" >
-        <div class="BoxBorder" style="height:718px;width:445px"  >
+        <div class="BoxBorder box" style="height:718px;width:445px"  >
         <ul>
             <li><div class="ImageSwitch"><a class="knopfdings" onclick="changeImageBase()">Base</a></div></li>
             <li><div class="ImageSwitch"><a class="knopfdings" onclick="changeImageShadowAssassin()">Shadow Assassin</a></div></li>
@@ -40,30 +40,35 @@
         </table>
             </div>
 
+        <div style="display: grid;">
 
 
-
-        <div class="BoxBorder" style="display:flex;height:718px;width:445px;"></div>
-        <h1 class="Margin"  style="grid-column-start:2;grid-column-end:2 ;">Abilities </h1>
-
-            <div class="BoxBorder" style="display:grid;;">
+        <div class="BoxBorder box" style="height:718px;width:445px;">Background Early life Noxus Crest icon Noxian by birth, Shieda Kayn was conscripted as a child soldier like many others. When he was no more than ten, he and his comrades were ordered to attack the province of Bahrl in Ionia Crest icon Ionia. He and other young soldiers made up the vanguard of the attack. While Kayn’s young comrades fled or were cut down by the defenders before the Noxian regulars came in from the flank, Kayn showed no fear and survived to see the end of the battle. Zed Zed and his followers arrived on the battleground two days later. There, they found Kayn on the ground, leveling a sickle at Zed. The Master of Shadows saw potential in the boy and welcomed him into the The Order of The Shadows Crest Yánléi. After joining the order, the young Kayn was given food and a home to stay. Growing up training as an acolyte of the order, Kayn was able to master all the weapons given to him while other acolytes spent years training with a single weapon. By drinking the Tears of the Shadow, Kayn gained the ability to cloak himself in the shadows to stealthily assassinate enemies. He was able to spread fear among the survivors through his swift kills, using fear as his weapon. As Kayn's power and reputation grew, he gained hubristic ambitions that one day he could be more powerful than even Zed. Wielding Rhaast Rhaast Main article: The Blade of Millenia Kayn was later sent on a mission to Noxus as his final test: to procure a Runeterra Crest icon Darkin scythe recently uncovered in the Noxian city of Vindor to stop the weapon from being used against the Ionians. Accompanied by his fellow acolyte Nakuri, he used his shadow magic to sneak up on the three guards defending the noxtoraa, killing two of them before intimidating the last one, whom was killed by Nakuri. After killing several more Noxian soldiers, Kayn approached the weapon where he heard the Darkin Rhaast Rhaast call to him from within the scythe. One of the Noxians snatched the scythe in desperation, and began to swing it uncontrollably at his comrades as Rhaast's corruption took over. Realizing that the legends were true, Kayn, using a shadow technique, possessed the soldier's body, where he witnessed the atrocities that Rhaast inflicted over millennia. However, instead of destroying it as ordered, he was tempted to wield the Darkin for himself. Ignoring Nakuri's pleas, Kayn took hold of Rhaast and underwent the same corruption, but Kayn was able to resist his will and control his enhanced power. After a final struggle against Nakuri, Kayn killed his fellow acolyte. Since then, Kayn now duels Rhaast over control over his own body, until one of them wins and seizes control.</div>
+    </div>
+        <h1 class="Margin">Abilities </h1>
+        <div>
+            <div class="BoxBorder" style="display:grid;">
         
             <div><h2>The Darkin Scythe</h2></div>
-            <div  style="vertical-align: top; display: grid;"> <img src="https://static.wikia.nocookie.net/leagueoflegends/images/1/1a/Kayn_The_Darkin_Scythe.png/revision/latest?cb=20240813005258"></div>
-            <div  style="grid-row-end:span 2; display: grid;" ><p>Innate: Kayn has a secondary experience bar that tracks progress toward his Darkin and Shadow Assassin forms. He gathers orbs from champion takedowns and each instance of damage (excluding damage over time) dealt against champions. Once he has earned enough orbs, he unlocks a form based on whether he earned more from melee or ranged champions (for Darkin and Shadow Assassin, respectively), with the other form unlocked later.</p></div>
+            <div  style="vertical-align: top;"> <img src="https://static.wikia.nocookie.net/leagueoflegends/images/1/1a/Kayn_The_Darkin_Scythe.png/revision/latest?cb=20240813005258"></div>
+            <div  style="grid-row-end:span 2;" ><p>Innate: Kayn has a secondary experience bar that tracks progress toward his Darkin and Shadow Assassin forms. He gathers orbs from champion takedowns and each instance of damage (excluding damage over time) dealt against champions. Once he has earned enough orbs, he unlocks a form based on whether he earned more from melee or ranged champions (for Darkin and Shadow Assassin, respectively), with the other form unlocked later.</p></div>
             <div><img src="https://static.wikia.nocookie.net/leagueoflegends/images/9/97/Kayn_Form_Selection_UI.png/revision/latest/scale-to-width-down/64?cb=20220704094040"></div>
             <div><p>Kayn can move near the summoning platform to transform over 6 seconds, restoring to full health and mana and becoming invulnerable, untargetable, and unable to act for the duration. Kayn cannot choose a form if he is unable to cast abilities. The transformation will grant a passive bonus and permanently empower some of Kayn's abilities based on the form chosen. He gains a one-time Homeguard once the transformation is complete.</p></div>
             <div><img src="https://static.wikia.nocookie.net/leagueoflegends/images/4/41/Kayn_The_Darkin_Scythe_A.png/revision/latest?cb=20240813005224"></div>
             <div><p>Shadow Assassin Bonus: If Kayn has been out of combat with enemy champions for over 8 seconds, or he casts Umbral Trespass, upon entering combat and lasting for 3 seconds, he deals 15% - 45% (based on level) of post-mitigation damage dealt against enemy champions as bonus magic damage, also applying on the first instance of damage dealt. If this effect is ready, it will not be lost by taking damage.</p></div>
             <div><img src="https://static.wikia.nocookie.net/leagueoflegends/images/e/eb/Kayn_The_Darkin_Scythe_R.png/revision/latest?cb=20240813005235"></div>
             <div><p>Darkin Bonus: Rhaast heals for 25% (+ 0.5% per 100 bonus health) of the post-mitigation physical damage that he deals to enemy champions with his abilities.</p></div>
-            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
     
 
 
     <div class="BoxBorder" style="display:grid;">
         <div><h2> Reaping Slash  </h2></div>
-
+    </div>
 
 
 
